--- a/notebooks/03b_indexing.ipynb
+++ b/notebooks/03b_indexing.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b>03 - Pandas: Indexing and selecting data - part II</b></font></p>\n",
     "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -685,7 +686,7 @@
     "* Use `loc` instead of chained indexing **if possible**!\n",
     "* Or `copy` explicitly if you don't want to change the original data.\n",
     "\n",
-    "</div>"
+    "</div>\n"
    ]
   }
  ],
