--- a/notebooks/08_reshaping_data.ipynb
+++ b/notebooks/08_reshaping_data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b>07 - Pandas: Tidy data and reshaping</b></font></p>\n",
     "\n",
-    "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -1209,7 +1209,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load _solutions/pandas_08_reshaping_data20.py"
+    "# %load _solutions/pandas_08_reshaping_data20.py\n"
    ]
   }
  ],
