--- a/notebooks/case2_observations_processing.ipynb
+++ b/notebooks/case2_observations_processing.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<p><font size=\"6\"><b> CASE - Observation data - data cleaning and enrichment</b></font></p>\n",
     "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -2173,7 +2174,7 @@
     "* `species.csv` and `survey.csv` are used from the [data carpentry workshop](https://github.com/datacarpentry/python-ecology-lesson) This data is from the paper S. K. Morgan Ernest, Thomas J. Valone, and James H.\n",
     "Brown. 2009. Long-term monitoring and experimental manipulation of a Chihuahuan Desert ecosystem near Portal, Arizona, USA. Ecology 90:1708. http://esapubs.org/archive/ecol/E090/118/\n",
     "* The `plot_location.xlsx` is a dummy created location file purely created for this exercise, using the plots location on google maps\n",
-    "* [GBIF API](http://www.gbif.org/developer/summary)"
+    "* [GBIF API](http://www.gbif.org/developer/summary)\n"
    ]
   }
  ],
