--- a/notebooks/02_basic_operations.ipynb
+++ b/notebooks/02_basic_operations.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b> 02 - Pandas: Basic operations on Series and DataFrames</b></font></p>\n",
     "\n",
-    "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -756,7 +756,7 @@
     "\n",
     "> This notebook is partly based on material of Jake Vanderplas (https://github.com/jakevdp/OsloWorkshop2014).\n",
     "\n",
-    "---"
+    "---\n"
    ]
   }
  ],
