--- a/notebooks/05_groupby_operations.ipynb
+++ b/notebooks/05_groupby_operations.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b>06 - Pandas: \"Group by\" operations</b></font></p>\n",
     "\n",
-    "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -1202,7 +1202,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load _solutions/pandas_05_groupby_operations31.py"
+    "# %load _solutions/pandas_05_groupby_operations31.py\n"
    ]
   }
  ],
