--- a/notebooks/06_data_cleaning.ipynb
+++ b/notebooks/06_data_cleaning.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b> Pandas: Methods for data cleaning</b></font></p>\n",
     "\n",
-    "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -897,7 +897,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load _solutions/pandas_06_data_cleaning15.py"
+    "# %load _solutions/pandas_06_data_cleaning15.py\n"
    ]
   }
  ],
