--- a/notebooks/07_missing_values.ipynb
+++ b/notebooks/07_missing_values.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<p><font size=\"6\"><b>08 - Pandas: Working with missing data </b></font></p>\n",
     "\n",
-    "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -15,9 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fad2705f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:40:38.533330Z",
+     "start_time": "2023-07-12T14:40:38.108802Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -26,10 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6cf9e666",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:40:49.386866Z",
+     "start_time": "2023-07-12T14:40:49.376094Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8\n2  NaN  NaN  9",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame({'A': [1, 2, np.nan],\n",
     "                   'B': [4, np.nan, np.nan],\n",
@@ -55,20 +75,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "17a6454f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:40:57.778255Z",
+     "start_time": "2023-07-12T14:40:57.764676Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "nan"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.loc[2, 'A']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "35dc8450",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:40:58.112401Z",
+     "start_time": "2023-07-12T14:40:58.094940Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "nan"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.nan"
    ]
@@ -95,20 +143,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1e2b48d5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:40:59.590384Z",
+     "start_time": "2023-07-12T14:40:59.577Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.5"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "96daf776",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-12T14:41:00.052388Z",
+     "start_time": "2023-07-12T14:41:00.035820Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "nan"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'].mean(skipna=False)"
    ]
