--- a/notebooks/visualization_03_landscape.ipynb
+++ b/notebooks/visualization_03_landscape.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<p><font size=\"6\"><b>Visualization - Python's Visualization Landscape</b></font></p>\n",
     "\n",
+    "Adapted version from:\n",
     "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -1230,7 +1231,7 @@
     "## Acknowledgements\n",
     "\n",
     "\n",
-    "- https://speakerdeck.com/jakevdp/pythons-visualization-landscape-pycon-2017"
+    "- https://speakerdeck.com/jakevdp/pythons-visualization-landscape-pycon-2017\n"
    ]
   }
  ],
