cleanup and go-trough first notebooks

--- a/_solved/pandas_01_data_structures.ipynb
+++ b/_solved/pandas_01_data_structures.ipynb
@@ -5,9 +5,12 @@
    "id": "f71aea09",
    "metadata": {},
    "source": [
+    "# Workshop Data Analysis with Python @UWC\n",
+    "Simon Perneel mailto://simon.perneel@ugent.be\n",
+    "\n",
     "<p><font size=\"6\"><b>01 - Pandas: Data Structures </b></font></p>\n",
     "\n",
-    "> *© 2021, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
+    "> *© 2021, Joris Van den Bossche and Stijn Van Hoey. Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
    ]
@@ -742,7 +745,7 @@
     "# Acknowledgement\n",
     "\n",
     "\n",
-    "> This notebook is partly based on material of Jake Vanderplas (https://github.com/jakevdp/OsloWorkshop2014)."
+    "> This notebook is partly based on material of Jake Vanderplas (https://github.com/jakevdp/OsloWorkshop2014).\n"
    ]
   }
  ],
