--- a/notebooks/python_recap/00-jupyter_introduction.ipynb
+++ b/notebooks/python_recap/00-jupyter_introduction.ipynb
@@ -10,10 +10,6 @@
    "source": [
     "<p><font size=\"6\"><b>Jupyter notebook INTRODUCTION </b></font></p>\n",
     "\n",
-    "\n",
-    "> *DS Data manipulation, analysis and visualisation in Python*  \n",
-    "> *December, 2017*\n",
-    "\n",
     "> *© 2016, Joris Van den Bossche and Stijn Van Hoey  (<mailto:jorisvandenbossche@gmail.com>, <mailto:stijnvanhoey@gmail.com>). Licensed under [CC BY 4.0 Creative Commons](http://creativecommons.org/licenses/by/4.0/)*\n",
     "\n",
     "---"
@@ -847,7 +843,7 @@
    "source": [
     "The follow-up notebooks provide additional background (largely adopted from the [scientific python notes](http://www.scipy-lectures.org/), which you can explore on your own to get more background on the Python syntax if specific elements would not be clear. \n",
     "\n",
-    "For now, we will work on the `python_rehearsal.ipynb` notebook, which is a short summary version of the other notebooks to quickly grasp the main elements"
+    "For now, we will work on the `python_rehearsal.ipynb` notebook, which is a short summary version of the other notebooks to quickly grasp the main elements\n"
    ]
   }
  ],
