--- a/notebooks/00-jupyter_introduction.ipynb
+++ b/notebooks/00-jupyter_introduction.ipynb
@@ -14,9 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:34:55.829744Z",
+     "start_time": "2023-07-30T18:34:55.815559Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<img src=\"http://python.org/images/python-logo.gif\"/>",
+      "text/plain": "<IPython.core.display.Image object>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Image\n",
     "Image(url='http://python.org/images/python-logo.gif')"
@@ -53,19 +68,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:35:54.253711Z",
+     "start_time": "2023-07-30T18:35:54.249820Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, University Of Western Cape\n"
+     ]
+    }
+   ],
    "source": [
     "# Code cell, then we are using python\n",
-    "print('Hello DS')"
+    "print('Hello, University Of Western Cape')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:36:06.937698Z",
+     "start_time": "2023-07-30T18:36:06.930681Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "DS = 10\n",
     "print(DS + 5) # Yes, we advise to use Python 3 (!)"
@@ -75,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Writing code is what you will do most during this course!"
+    "Writing code is what you will do most during this workshop!"
    ]
   },
   {
@@ -225,9 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:37:24.279572Z",
+     "start_time": "2023-07-30T18:37:24.276958Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function posix.mkdir(path, mode=511, *, dir_fd=None)>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.mkdir"
@@ -235,8 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:37:24.984505Z",
+     "start_time": "2023-07-30T18:37:24.978229Z"
+    }
+   },
    "outputs": [],
    "source": [
     "my_very_long_variable_name = 3"
@@ -266,18 +326,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:37:31.262338Z",
+     "start_time": "2023-07-30T18:37:31.256724Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "3"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "round(3.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:37:32.680746Z",
+     "start_time": "2023-07-30T18:37:32.677796Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function posix.mkdir(path, mode=511, *, dir_fd=None)>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.mkdir"
@@ -285,8 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:37:33.355739Z",
+     "start_time": "2023-07-30T18:37:33.337168Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# An alternative is to put a question mark behind the command\n",
@@ -304,8 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:38:05.095513Z",
+     "start_time": "2023-07-30T18:38:05.089901Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import glob\n",
@@ -386,17 +484,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Stackoverflow** is really, really, really nice!\n",
-    "\n",
-    "  http://stackoverflow.com/questions/tagged/python"
+    "* Google search is with you!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "* Google search is with you!"
-   ]
+    "* **Stackoverflow** is really, nice!\n",
+    "\n",
+    "  http://stackoverflow.com/questions/tagged/python"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* **ChatGPT** is really, really, really nice!"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -422,8 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:40:51.984747Z",
+     "start_time": "2023-07-30T18:40:51.979100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%psearch os.*dir"
@@ -438,14 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:13.297206Z",
+     "start_time": "2023-07-30T18:40:56.655703Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "199 µs ± 7.1 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "207 µs ± 6.85 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -459,8 +578,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:13.693539Z",
+     "start_time": "2023-07-30T18:41:13.299566Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -468,14 +592,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:23.134326Z",
+     "start_time": "2023-07-30T18:41:13.692476Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.09 µs ± 7.99 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.17 µs ± 25 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -494,16 +623,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:23.144143Z",
+     "start_time": "2023-07-30T18:41:23.135217Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable   Type      Data/Info\n",
-      "------------------------------\n",
-      "np         module    <module 'numpy' from '/op<...>kages/numpy/__init__.py'>\n"
+      "Variable                        Type        Data/Info\n",
+      "-----------------------------------------------------\n",
+      "DS                              int         10\n",
+      "Image                           type        <class 'IPython.core.display.Image'>\n",
+      "glob                            module      <module 'glob' from '/opt<...>/lib/python3.10/glob.py'>\n",
+      "my_very_long_variable_name      int         3\n",
+      "np                              module      <module 'numpy' from '/op<...>kages/numpy/__init__.py'>\n",
+      "os                              module      <module 'os' from '/opt/h<...>nv/lib/python3.10/os.py'>\n",
+      "pydev_jupyter_vars              module      <module 'pydev_jupyter_va<...>g/pydev_jupyter_vars.py'>\n",
+      "remove_imported_pydev_package   function    <function remove_imported<...>v_package at 0x104ee3880>\n",
+      "sys                             module      <module 'sys' (built-in)>\n"
      ]
     }
    ],
@@ -520,8 +662,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:23.144798Z",
+     "start_time": "2023-07-30T18:41:23.138077Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -657,7 +804,7 @@
        }
       }
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,8 +822,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:23.145040Z",
+     "start_time": "2023-07-30T18:41:23.141242Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from IPython.display import FileLink, FileLinks"
@@ -684,15 +836,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T18:41:23.148775Z",
+     "start_time": "2023-07-30T18:41:23.144934Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "./\n  visualization_01_matplotlib.ipynb\n  pandas_03b_indexing.ipynb\n  visualization_03_landscape.ipynb\n  case3_bacterial_resistance_lab_experiment.ipynb\n  pandas_06_data_cleaning.ipynb\n  pandas_09_combining_datasets.ipynb\n  pandas_03a_selecting_data.ipynb\n  pandas_08_reshaping_data.ipynb\n  case2_observations.ipynb\n  case2_observations_analysis.ipynb\n  00-jupyter_introduction.ipynb\n  case4_air_quality_processing.ipynb\n  visualization_02_seaborn.ipynb\n  pandas_02_basic_operations.ipynb\n  pandas_01_data_structures.ipynb\n  case1_bike_count.ipynb\n  pandas_07_missing_values.ipynb\n  pandas_05_groupby_operations.ipynb\n  case4_air_quality_analysis.ipynb\n  case2_observations_processing.ipynb\n  pandas_04_time_series_data.ipynb",
-      "text/html": "./<br>\n&nbsp;&nbsp;<a href='./visualization_01_matplotlib.ipynb' target='_blank'>visualization_01_matplotlib.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_03b_indexing.ipynb' target='_blank'>pandas_03b_indexing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_03_landscape.ipynb' target='_blank'>visualization_03_landscape.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case3_bacterial_resistance_lab_experiment.ipynb' target='_blank'>case3_bacterial_resistance_lab_experiment.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_06_data_cleaning.ipynb' target='_blank'>pandas_06_data_cleaning.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_09_combining_datasets.ipynb' target='_blank'>pandas_09_combining_datasets.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_03a_selecting_data.ipynb' target='_blank'>pandas_03a_selecting_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_08_reshaping_data.ipynb' target='_blank'>pandas_08_reshaping_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations.ipynb' target='_blank'>case2_observations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_analysis.ipynb' target='_blank'>case2_observations_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./00-jupyter_introduction.ipynb' target='_blank'>00-jupyter_introduction.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_processing.ipynb' target='_blank'>case4_air_quality_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_02_seaborn.ipynb' target='_blank'>visualization_02_seaborn.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_02_basic_operations.ipynb' target='_blank'>pandas_02_basic_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_01_data_structures.ipynb' target='_blank'>pandas_01_data_structures.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case1_bike_count.ipynb' target='_blank'>case1_bike_count.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_07_missing_values.ipynb' target='_blank'>pandas_07_missing_values.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_05_groupby_operations.ipynb' target='_blank'>pandas_05_groupby_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_analysis.ipynb' target='_blank'>case4_air_quality_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_processing.ipynb' target='_blank'>case2_observations_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_04_time_series_data.ipynb' target='_blank'>pandas_04_time_series_data.ipynb</a><br>"
+      "text/plain": "./\n  visualization_01_matplotlib.ipynb\n  06_data_cleaning.ipynb\n  visualization_03_landscape.ipynb\n  case3_bacterial_resistance_lab_experiment.ipynb\n  .DS_Store\n  08_reshaping_data.ipynb\n  09_combining_datasets.ipynb\n  case2_observations.ipynb\n  03b_indexing.ipynb\n  case2_observations_analysis.ipynb\n  01_data_structures.ipynb\n  00-jupyter_introduction.ipynb\n  fietstelpaal-coupure-links-2022-gent.csv\n  case4_air_quality_processing.ipynb\n  visualization_02_seaborn.ipynb\n  my_plot_with_one_issue.pdf\n  case1_bike_count.ipynb\n  02_basic_operations.ipynb\n  07_missing_values.ipynb\n  case4_air_quality_analysis.ipynb\n  05_groupby_operations.ipynb\n  case2_observations_processing.ipynb\n  04_time_series_data.ipynb\n  bike_count_interim.csv\n  03a_selecting_data.ipynb",
+      "text/html": "./<br>\n&nbsp;&nbsp;<a href='./visualization_01_matplotlib.ipynb' target='_blank'>visualization_01_matplotlib.ipynb</a><br>\n&nbsp;&nbsp;<a href='./06_data_cleaning.ipynb' target='_blank'>06_data_cleaning.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_03_landscape.ipynb' target='_blank'>visualization_03_landscape.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case3_bacterial_resistance_lab_experiment.ipynb' target='_blank'>case3_bacterial_resistance_lab_experiment.ipynb</a><br>\n&nbsp;&nbsp;<a href='./.DS_Store' target='_blank'>.DS_Store</a><br>\n&nbsp;&nbsp;<a href='./08_reshaping_data.ipynb' target='_blank'>08_reshaping_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./09_combining_datasets.ipynb' target='_blank'>09_combining_datasets.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations.ipynb' target='_blank'>case2_observations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./03b_indexing.ipynb' target='_blank'>03b_indexing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_analysis.ipynb' target='_blank'>case2_observations_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./01_data_structures.ipynb' target='_blank'>01_data_structures.ipynb</a><br>\n&nbsp;&nbsp;<a href='./00-jupyter_introduction.ipynb' target='_blank'>00-jupyter_introduction.ipynb</a><br>\n&nbsp;&nbsp;<a href='./fietstelpaal-coupure-links-2022-gent.csv' target='_blank'>fietstelpaal-coupure-links-2022-gent.csv</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_processing.ipynb' target='_blank'>case4_air_quality_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_02_seaborn.ipynb' target='_blank'>visualization_02_seaborn.ipynb</a><br>\n&nbsp;&nbsp;<a href='./my_plot_with_one_issue.pdf' target='_blank'>my_plot_with_one_issue.pdf</a><br>\n&nbsp;&nbsp;<a href='./case1_bike_count.ipynb' target='_blank'>case1_bike_count.ipynb</a><br>\n&nbsp;&nbsp;<a href='./02_basic_operations.ipynb' target='_blank'>02_basic_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./07_missing_values.ipynb' target='_blank'>07_missing_values.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_analysis.ipynb' target='_blank'>case4_air_quality_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./05_groupby_operations.ipynb' target='_blank'>05_groupby_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_processing.ipynb' target='_blank'>case2_observations_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./04_time_series_data.ipynb' target='_blank'>04_time_series_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./bike_count_interim.csv' target='_blank'>bike_count_interim.csv</a><br>\n&nbsp;&nbsp;<a href='./03a_selecting_data.ipynb' target='_blank'>03a_selecting_data.ipynb</a><br>"
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,10 +862,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The follow-up notebooks provide additional background (largely adopted from the [scientific python notes](http://www.scipy-lectures.org/), which you can explore on your own to get more background on the Python syntax if specific elements would not be clear. \n",
+    "The follow-up notebooks in `/python_recap/` directory provide additional background (largely adopted from the [scientific python notes](http://www.scipy-lectures.org/), which you can explore on your own to get more background on the Python syntax if specific elements would not be clear.\n",
     "\n",
-    "For now, we will work on the `python_rehearsal.ipynb` notebook, which is a short summary version of the other notebooks to quickly grasp the main elements\n"
+    "For now, we will start with the `01_data_structures` notebook, which is a\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
