--- a/notebooks/02_basic_operations.ipynb
+++ b/notebooks/02_basic_operations.ipynb
@@ -15,9 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f953ba9f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:04.320842Z",
+     "start_time": "2023-07-30T19:06:03.549201Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,9 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96e13348",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:04.328231Z",
+     "start_time": "2023-07-30T19:06:04.322441Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# redefining the example DataFrame\n",
@@ -43,10 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a3ef73b2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:04.340964Z",
+     "start_time": "2023-07-30T19:06:04.332025Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          country  population    area    capital\n0         Belgium        11.3   30510   Brussels\n1          France        64.3  671308      Paris\n2         Germany        81.3  357050     Berlin\n3     Netherlands        16.9   41526  Amsterdam\n4  United Kingdom        64.9  244820     London",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>population</th>\n      <th>area</th>\n      <th>capital</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Belgium</td>\n      <td>11.3</td>\n      <td>30510</td>\n      <td>Brussels</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>France</td>\n      <td>64.3</td>\n      <td>671308</td>\n      <td>Paris</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Germany</td>\n      <td>81.3</td>\n      <td>357050</td>\n      <td>Berlin</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Netherlands</td>\n      <td>16.9</td>\n      <td>41526</td>\n      <td>Amsterdam</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>United Kingdom</td>\n      <td>64.9</td>\n      <td>244820</td>\n      <td>London</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries.head()"
    ]
@@ -71,10 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29dbad6f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:10.761394Z",
+     "start_time": "2023-07-30T19:06:10.758143Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    11.3\n1    64.3\n2    81.3\n3    16.9\n4    64.9\nName: population, dtype: float64"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population = countries['population']\n",
     "population"
@@ -82,20 +121,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "adb7d259",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:11.376236Z",
+     "start_time": "2023-07-30T19:06:11.374052Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    11300.0\n1    64300.0\n2    81300.0\n3    16900.0\n4    64900.0\nName: population, dtype: float64"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population * 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c9b4a5c0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:11.854045Z",
+     "start_time": "2023-07-30T19:06:11.826940Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    False\n1     True\n2     True\n3    False\n4     True\nName: population, dtype: bool"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population > 50"
    ]
@@ -110,10 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81f42121",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:13.014297Z",
+     "start_time": "2023-07-30T19:06:13.008797Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    0.000370\n1    0.000096\n2    0.000228\n3    0.000407\n4    0.000265\ndtype: float64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries['population'] / countries['area']"
    ]
@@ -132,9 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f855dc5f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:14.016821Z",
+     "start_time": "2023-07-30T19:06:14.013556Z"
+    }
+   },
    "outputs": [],
    "source": [
     "countries['population_density'] = countries['population'] / countries['area'] * 1e6"
@@ -142,10 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dc023a7c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:15.697323Z",
+     "start_time": "2023-07-30T19:06:15.693191Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          country  population    area    capital  population_density\n0         Belgium        11.3   30510   Brussels          370.370370\n1          France        64.3  671308      Paris           95.783158\n2         Germany        81.3  357050     Berlin          227.699202\n3     Netherlands        16.9   41526  Amsterdam          406.973944\n4  United Kingdom        64.9  244820     London          265.092721",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>population</th>\n      <th>area</th>\n      <th>capital</th>\n      <th>population_density</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Belgium</td>\n      <td>11.3</td>\n      <td>30510</td>\n      <td>Brussels</td>\n      <td>370.370370</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>France</td>\n      <td>64.3</td>\n      <td>671308</td>\n      <td>Paris</td>\n      <td>95.783158</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Germany</td>\n      <td>81.3</td>\n      <td>357050</td>\n      <td>Berlin</td>\n      <td>227.699202</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Netherlands</td>\n      <td>16.9</td>\n      <td>41526</td>\n      <td>Amsterdam</td>\n      <td>406.973944</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>United Kingdom</td>\n      <td>64.9</td>\n      <td>244820</td>\n      <td>London</td>\n      <td>265.092721</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries"
    ]
@@ -176,12 +277,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99599cbf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:06:20.626548Z",
+     "start_time": "2023-07-30T19:06:20.611692Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "47.739999999999995"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "population.mean()"
+    "#population.mean()"
    ]
   },
   {
@@ -199,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries['area'].min()"
+    "#countries['area'].min()"
    ]
   },
   {
@@ -217,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.median(numeric_only=True)"
+    "#countries.median(numeric_only=True)"
    ]
   },
   {
@@ -312,12 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a49adcdf",
    "metadata": {
     "tags": [
      "nbtutor-solution"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:07:27.267523Z",
+     "start_time": "2023-07-30T19:07:27.263654Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -340,12 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5127f39d",
    "metadata": {
     "tags": [
      "nbtutor-solution"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-07-30T19:07:37.424881Z",
+     "start_time": "2023-07-30T19:07:37.411504Z"
+    }
    },
    "outputs": [],
    "source": [
