--- a/notebooks/02_basic_operations.ipynb
+++ b/notebooks/02_basic_operations.ipynb
@@ -64,8 +64,79 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "          country  population    area    capital\n0         Belgium        11.3   30510   Brussels\n1          France        64.3  671308      Paris\n2         Germany        81.3  357050     Berlin\n3     Netherlands        16.9   41526  Amsterdam\n4  United Kingdom        64.9  244820     London",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>population</th>\n      <th>area</th>\n      <th>capital</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Belgium</td>\n      <td>11.3</td>\n      <td>30510</td>\n      <td>Brussels</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>France</td>\n      <td>64.3</td>\n      <td>671308</td>\n      <td>Paris</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Germany</td>\n      <td>81.3</td>\n      <td>357050</td>\n      <td>Berlin</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Netherlands</td>\n      <td>16.9</td>\n      <td>41526</td>\n      <td>Amsterdam</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>United Kingdom</td>\n      <td>64.9</td>\n      <td>244820</td>\n      <td>London</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>capital</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>30510</td>\n",
+       "      <td>Brussels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>France</td>\n",
+       "      <td>64.3</td>\n",
+       "      <td>671308</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>357050</td>\n",
+       "      <td>Berlin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>41526</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>64.9</td>\n",
+       "      <td>244820</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          country  population    area    capital\n",
+       "0         Belgium        11.3   30510   Brussels\n",
+       "1          France        64.3  671308      Paris\n",
+       "2         Germany        81.3  357050     Berlin\n",
+       "3     Netherlands        16.9   41526  Amsterdam\n",
+       "4  United Kingdom        64.9  244820     London"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -79,7 +150,9 @@
   {
    "cell_type": "markdown",
    "id": "e0b2d3d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Elementwise-operations"
    ]
@@ -107,7 +180,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    11.3\n1    64.3\n2    81.3\n3    16.9\n4    64.9\nName: population, dtype: float64"
+      "text/plain": [
+       "0    11.3\n",
+       "1    64.3\n",
+       "2    81.3\n",
+       "3    16.9\n",
+       "4    64.9\n",
+       "Name: population, dtype: float64"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -132,7 +212,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    11300.0\n1    64300.0\n2    81300.0\n3    16900.0\n4    64900.0\nName: population, dtype: float64"
+      "text/plain": [
+       "0    11300.0\n",
+       "1    64300.0\n",
+       "2    81300.0\n",
+       "3    16900.0\n",
+       "4    64900.0\n",
+       "Name: population, dtype: float64"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -156,7 +243,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    False\n1     True\n2     True\n3    False\n4     True\nName: population, dtype: bool"
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2     True\n",
+       "3    False\n",
+       "4     True\n",
+       "Name: population, dtype: bool"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -188,7 +282,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    0.000370\n1    0.000096\n2    0.000228\n3    0.000407\n4    0.000265\ndtype: float64"
+      "text/plain": [
+       "0    0.000370\n",
+       "1    0.000096\n",
+       "2    0.000228\n",
+       "3    0.000407\n",
+       "4    0.000265\n",
+       "dtype: float64"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -202,7 +303,10 @@
   {
    "cell_type": "markdown",
    "id": "d0bc09df",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Adding new columns\n",
     "\n",
@@ -239,8 +343,85 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "          country  population    area    capital  population_density\n0         Belgium        11.3   30510   Brussels          370.370370\n1          France        64.3  671308      Paris           95.783158\n2         Germany        81.3  357050     Berlin          227.699202\n3     Netherlands        16.9   41526  Amsterdam          406.973944\n4  United Kingdom        64.9  244820     London          265.092721",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>population</th>\n      <th>area</th>\n      <th>capital</th>\n      <th>population_density</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Belgium</td>\n      <td>11.3</td>\n      <td>30510</td>\n      <td>Brussels</td>\n      <td>370.370370</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>France</td>\n      <td>64.3</td>\n      <td>671308</td>\n      <td>Paris</td>\n      <td>95.783158</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Germany</td>\n      <td>81.3</td>\n      <td>357050</td>\n      <td>Berlin</td>\n      <td>227.699202</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Netherlands</td>\n      <td>16.9</td>\n      <td>41526</td>\n      <td>Amsterdam</td>\n      <td>406.973944</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>United Kingdom</td>\n      <td>64.9</td>\n      <td>244820</td>\n      <td>London</td>\n      <td>265.092721</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>capital</th>\n",
+       "      <th>population_density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>30510</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>370.370370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>France</td>\n",
+       "      <td>64.3</td>\n",
+       "      <td>671308</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>95.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>357050</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>227.699202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>41526</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>406.973944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>64.9</td>\n",
+       "      <td>244820</td>\n",
+       "      <td>London</td>\n",
+       "      <td>265.092721</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          country  population    area    capital  population_density\n",
+       "0         Belgium        11.3   30510   Brussels          370.370370\n",
+       "1          France        64.3  671308      Paris           95.783158\n",
+       "2         Germany        81.3  357050     Berlin          227.699202\n",
+       "3     Netherlands        16.9   41526  Amsterdam          406.973944\n",
+       "4  United Kingdom        64.9  244820     London          265.092721"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
@@ -254,7 +435,10 @@
   {
    "cell_type": "markdown",
    "id": "104edcdc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Aggregations (reductions)"
    ]
@@ -288,7 +472,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "47.739999999999995"
+      "text/plain": [
+       "47.739999999999995"
+      ]
      },
      "execution_count": 10,
      "metadata": {},
@@ -338,7 +524,10 @@
   {
    "cell_type": "markdown",
    "id": "26689b13",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Application on a real dataset"
    ]
@@ -430,13 +619,13 @@
    "execution_count": 15,
    "id": "a49adcdf",
    "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ],
     "ExecuteTime": {
      "end_time": "2023-07-30T19:07:27.267523Z",
      "start_time": "2023-07-30T19:07:27.263654Z"
-    }
+    },
+    "tags": [
+     "nbtutor-solution"
+    ]
    },
    "outputs": [],
    "source": [
@@ -462,13 +651,13 @@
    "execution_count": 17,
    "id": "5127f39d",
    "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ],
     "ExecuteTime": {
      "end_time": "2023-07-30T19:07:37.424881Z",
      "start_time": "2023-07-30T19:07:37.411504Z"
-    }
+    },
+    "tags": [
+     "nbtutor-solution"
+    ]
    },
    "outputs": [],
    "source": [
@@ -688,7 +877,10 @@
   {
    "cell_type": "markdown",
    "id": "f78438e1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Numpy -  multidimensional data arrays"
    ]
@@ -902,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
